--- a/pom.xml
+++ b/pom.xml
@@ -43,7 +43,12 @@
             <artifactId>jsoup</artifactId>
             <version>1.12.1</version>
         </dependency>
-
+        <dependency>
+            <groupId>com.h2database</groupId>
+            <artifactId>h2</artifactId>
+            <version>1.4.199</version>
+            <scope>compile</scope>
+        </dependency>
     </dependencies>
 
     <build>
