--- a/pom.xml
+++ b/pom.xml
@@ -59,6 +59,11 @@
             <artifactId>mybatis</artifactId>
             <version>3.5.3</version>
         </dependency>
+        <dependency>
+            <groupId>mysql</groupId>
+            <artifactId>mysql-connector-java</artifactId>
+            <version>8.0.18</version>
+        </dependency>
     </dependencies>
 
     <build>
@@ -122,9 +127,9 @@
                 <artifactId>flyway-maven-plugin</artifactId>
                 <version>5.2.4</version>
                 <configuration>
-                    <url>jdbc:h2:file:/e:/crawler/news</url>
+                    <url>jdbc:mysql://139.196.161.65:3306/crawler?characterEncoding=utf-8</url>
                     <user>root</user>
-                    <password>root</password>
+                    <password>KeYpZrZx</password>
                 </configuration>
             </plugin>
         </plugins>
